kubernetes/workloads/templates/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
  namespace: $WORKLOAD_NAMESPACE
  labels:
    app: code-server
    app.kubernetes.io/name: code-server
    app.kubernetes.io/part-of: ztc-workloads
spec:
  selector:
    app: code-server
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
